[gd_scene load_steps=9 format=3 uid="uid://buxgv27hahlxc"]

[ext_resource type="Script" path="res://invaders_area.gd" id="1_ikmb0"]
[ext_resource type="AudioStream" uid="uid://c0eex3vrddr24" path="res://music/2- Showdown in Turmoil carnival.ogg" id="2_ayi5p"]
[ext_resource type="AudioStream" uid="uid://bkh4q3vawyjmd" path="res://music/Track 6 (Traffic Lights).wav" id="3_lcb27"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ua7a4"]
size = Vector2(257, 311)

[sub_resource type="LabelSettings" id="LabelSettings_ggbi1"]
font_size = 34
outline_size = 10
outline_color = Color(0.04, 0.04, 0.04, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wsa3c"]
font_size = 43
font_color = Color(0.5, 0, 0, 1)
outline_size = 10
outline_color = Color(0.01, 0.01, 0.01, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jqheh"]
font_size = 41
font_color = Color(1, 1, 0, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_dxwbr"]
font_size = 43
font_color = Color(0.5, 0, 0, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="invaders_area" type="Node2D"]
script = ExtResource("1_ikmb0")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(519, 157)
shape = SubResource("RectangleShape2D_ua7a4")

[node name="cooldown" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="GUI" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="GUI"]
modulate = Color(1, 1, 0.0392157, 1)
self_modulate = Color(1, 1, 0, 1)
show_behind_parent = true
top_level = true
offset_left = 13.0
offset_top = 11.0
offset_right = 240.0
offset_bottom = 51.0
theme_override_constants/separation = 11

[node name="Label" type="Label" parent="GUI/HBoxContainer"]
layout_mode = 2
text = "invasores en territorio: "
label_settings = SubResource("LabelSettings_ggbi1")

[node name="invaders_counter" type="Label" parent="GUI/HBoxContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_wsa3c")

[node name="HBoxContainer3" type="HBoxContainer" parent="GUI"]
modulate = Color(1, 1, 0.0392157, 1)
self_modulate = Color(1, 1, 0, 1)
show_behind_parent = true
top_level = true
offset_left = 689.0
offset_top = 11.0
offset_right = 1113.0
offset_bottom = 70.0
theme_override_constants/separation = 11

[node name="Label" type="Label" parent="GUI/HBoxContainer3"]
layout_mode = 2
text = "invasores espantados: "
label_settings = SubResource("LabelSettings_ggbi1")

[node name="points" type="Label" parent="GUI/HBoxContainer3"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_wsa3c")

[node name="HBoxContainer2" type="HBoxContainer" parent="GUI"]
anchors_preset = -1
anchor_left = 0.309
anchor_top = 0.878
anchor_right = 0.309
anchor_bottom = 0.878
offset_left = 0.0319824
offset_top = 0.0559692
offset_right = 392.032
offset_bottom = 59.056

[node name="Label" type="Label" parent="GUI/HBoxContainer2"]
modulate = Color(1, 1, 0.00784314, 1)
layout_mode = 2
text = "TIEMPO RESTANTE: "
label_settings = SubResource("LabelSettings_jqheh")

[node name="countdown" type="Label" parent="GUI/HBoxContainer2"]
layout_mode = 2
label_settings = SubResource("LabelSettings_dxwbr")

[node name="audio_invaders_in_area" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ayi5p")
volume_db = 10.103

[node name="audio_general_level" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_lcb27")
volume_db = -9.513
autoplay = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="finished" from="audio_general_level" to="." method="_on_audio_general_level_finished"]
